# basic_os

./: .gdbinit  .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs
.cargo/: config.toml
DocAndBook/: qemu.dts
DocAndBook/basic_os_book/: book.toml
DocAndBook/basic_os_book/src/: SUMMARY.md  setup_guide.md
DocAndBook/basic_os_book/src/basic/: entry.md  riscv_hartid_devicetree.md
DocAndBook/basic_os_book/src/end/: contact_me.md  glossary.md
lib/arch/riscv/page_alloc/: Cargo.toml
lib/arch/riscv/page_alloc/src/: lib.rs  physical_memory_manager.rs
lib/arch/riscv/page_table/: Cargo.toml
lib/arch/riscv/page_table/src/: entry.rs  lib.rs
lib/arch/riscv/page_table/src/entry/: addr.rs  perm.rs
lib/arch/riscv/sbi_print/: Cargo.toml
lib/arch/riscv/sbi_print/src/: lib.rs
src/: main.rs  start.rs
src/arch/: mod.rs
src/arch/arm/: entry.rs  linker.ld
src/arch/riscv/: entry.rs  linker.ld  machine.rs  mod.rs
src/arch/x86/: entry.rs  linker.ld  multiboot.S
src/interface/: mem.rs
