[package]
name = "basic_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [
    "lib/arch/riscv/sbi_print",
    "lib/arch/riscv/page_table",
    "lib/arch/riscv/page_alloc",
]

#[profile.dev]
#panic = "abort"
#
#[profile.release]
#panic = "abort"

[dependencies]
spin = "0.9.6"
bit_field = "0.10.2"

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = "0.11.1"
sbi = "0.2.0"
fdt = "0.1.5"
sbi_print = { path = "lib/arch/riscv/sbi_print" }
page_table = { path = "lib/arch/riscv/page_table" }
page_alloc = { path = "lib/arch/riscv/page_alloc" }
